--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,12 @@
     margin: 0;
     margin-left: 15px;
     color: white;
-    font-size: 15px;
     font-family: "Zen Kaku Gothic Antique", sans-serif;
+    font-size: 12px;
+  }
+
+  .navbar-brand {
+    font-size: 15px;
   }
 
   .main__div {
@@ -31,7 +35,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
   .main__texto {
     color: white;
@@ -53,7 +56,7 @@
     text-align: center;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr ;
+    grid-template-rows: 1fr;
     align-items: center;
     justify-content: center;
     column-gap: 50px;
@@ -137,7 +140,7 @@
     margin-top: 40px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;    
+    justify-content: space-around;
     align-items: center;
     height: auto;
     background-color: #bbcdff;
@@ -155,7 +158,7 @@
     height: 100px;
   }
   .logoMarca__texto {
-    font-size: 22px;
+    font-size: 20px;
     color: white;
   }
 
@@ -166,15 +169,14 @@
     list-style: none;
     padding: 0;
     text-align: center;
-    
   }
   .footerDiv1__enlace {
     text-decoration: none;
-    color: #416aad;    
+    color: white;
     font-family: "PT Sans Narrow", sans-serif;
   }
   .footerDiv1__enlace:hover {
-    color: white;
+    color: #416aad;
   }
   .footerDiv1__item {
     margin: 20px 0px 20px 0px;
@@ -182,22 +184,19 @@
 
   .footerDiv2 {
     text-decoration: none;
-    
   }
   .footerDiv2__lista {
     list-style: none;
     padding: 0;
-    
   }
   .footerDiv2__enlace {
     text-decoration: none;
-    color: white;
+    color: #416aad;
     font-family: "PT Sans Narrow", sans-serif;
     font-size: 17px;
-    font-weight: bold;
   }
   .footerDiv2__enlace:hover {
-    color: #416aad;
+    color: white;
   }
   .footerDiv2__item {
     margin: 20px 0px 20px 0px;
@@ -205,7 +204,7 @@
 
   .carousel-item {
     width: 100%;
-    height: 150px;
+    height: 100px;
   }
 
   .carousel-control-next {
@@ -220,21 +219,21 @@
 
   #carouselExampleFade {
     width: 100%;
-    height: 150px;
+    height: 100px;
     margin: 30px auto 50px auto;
   }
 
   .carousel-inner {
     z-index: -1;
     width: 100%;
-    height: 150px;
+    height: 100px;
     border-radius: 15px;
   }
 
   .d-block {
     margin: auto;
     width: 100%;
-    height: 150px;
+    height: 100px;
   }
 
   .menuCarrito {
@@ -255,7 +254,7 @@
   .submenu__img {
     width: 20px;
     display: flex;
-    align-items: center;    
+    align-items: center;
   }
 
   .submenu #carrito {
@@ -271,7 +270,7 @@
     background-color: white;
     padding: 20px;
     min-height: 100px;
-    min-width: 550px;
+    min-width: 150px;
     border-radius: 10px;
     border: 1px solid #adadad;
   }
@@ -413,7 +412,7 @@
     text-align: center;
   }
   .divProductos__imagen {
-    width: 70%;
+    width: 60%;
     margin: 30px auto 30px auto;
     transition: 1s;
   }
@@ -547,8 +546,8 @@
   }
 
   .carousel-item {
-    width: 550px;
-    height: 200px;
+    width: 800px;
+    height: 250px;
   }
 
   .carousel-control-next {
@@ -562,21 +561,21 @@
   }
 
   #carouselExampleFade {
-    width: 550px;
-    height: 200px;
+    width: 800px;
+    height: 250px;
     margin: 30px auto 50px auto;
   }
 
   .carousel-inner {
     z-index: -1;
-    width: 550px;
-    height: 200px;
-    border-radius: 10px;
+    width: 800px;
+    height: 250px;
+    border-radius: 15px;
   }
 
   .d-block {
     margin: auto;
-    width: 550px;
+    width: 800px;
     height: 250px;
   }
 
